tests/baselines/reference/S7.8.5_A1.3_T1.errors.txt
S7.8.5_A1.3_T1.ts(28,1): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
S7.8.5_A1.3_T1.ts(28,2): error TS1161: Unterminated regular expression literal.
S7.8.5_A1.3_T1.ts(29,2): error TS1109: Expression expected.


==== S7.8.5_A1.3_T1.ts (3 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-RegularExpressionNonTerminator
    info: |
      RegularExpressionBody ::
        RegularExpressionFirstChar RegularExpressionChars
    
      RegularExpressionChars ::
        [empty]
        RegularExpressionChars RegularExpressionChar
    
      RegularExpressionFirstChar ::
        RegularExpressionNonTerminator but not one of * or \ or / or [
    
      RegularExpressionNonTerminator ::
        SourceCharacter but not LineTerminator
    
    description: >
      The first character of a regular expression may not be a <LF> (\u000A)
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /
    ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
     
!!! error TS1161: Unterminated regular expression literal.
    /
     
!!! error TS1109: Expression expected.
    